# quant-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/experiments/: mvp_daily_ls_wproxy.yaml
src/qtrading/: __init__.py
src/qtrading/core/: clock.py  config.py  interfaces.py  types.py
src/qtrading/data/: __init__.py  yfinance_pipeline.py
src/qtrading/validation/: leakage_checks.py
tests/: test_timing_contracts.py
